--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="pricing_error">There seems to be a problem.</string>
     <string name="sort"><![CDATA[SORT & FILTER]]></string>
     <string name="results">%1$d of %2$d results</string>
+    <string name="subTitle"><![CDATA[05 Mar – 06 Mar, 1 adult, economy]]></string>
+    <string name="title">EDI- LOND</string>
 </resources>
